@@ -33,7 +33,6 @@ void pilot_weapSetUpdate( Pilot* p );
 PilotWeaponSet* pilot_weapSet( Pilot* p, int id );
 const char *pilot_weapSetName( Pilot* p, int id );
 const char *pilot_weapSetTypeName( WeaponSetType t );
-void pilot_weapSetRmSlot( Pilot *p, int id, OutfitSlotType type );
 void pilot_weapSetAdd( Pilot* p, int id, PilotOutfitSlot *o, int level );
 void pilot_weapSetRm( Pilot* p, int id, PilotOutfitSlot *o );
 void pilot_weapSetClear( Pilot* p, int id );
